--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Learnimoo</title>
    </head>
-   <body>
+   <body class="">
       <div id="root"></div>
       <div id="modal"></div>
       <div id="notif"></div>
